--- a/app/views/admin/dropbox.html.erb
+++ b/app/views/admin/dropbox.html.erb
@@ -10,7 +10,7 @@
 				There is no Dropbox connection.
 				<% end %>
 	
-				<%= form_tag action: "dropbox" do %>
+				<%= form_tag action: "dropbox", class: "form-horizontal" do %>
 				<div class="control-group">
 					<label class="control-label" for="inputAppKey">App Key</label>
 					<div class="controls">
