--- a/app/views/admin/admins.html.erb
+++ b/app/views/admin/admins.html.erb
@@ -1,19 +1,24 @@
 <div class="container-fluid">
 	<div class="row-fluid">
 
-	<%= form_tag action: "admins" do %>
-	  <div class="control-group">
-	    <label class="control-label" for="inputAdmins">Admin ids</label>
-	    <div class="controls">
-	      <textarea id="inputAdmins" name="admins"><%= @admins %></textarea>
-	    </div>
-	  </div>
-	  <div class="control-group">
-	    <div class="controls">
-	      <button type="submit" class="btn">Save</button>
-	    </div>
-	  </div>
-	<% end %>
+		<div class="tabbable">
+			<div class="tab-content">
+
+				<%= form_tag action: "admins", class: "form-horizontal" do %>
+				<div class="control-group">
+					<label class="control-label" for="inputAdmins">Admin ids</label>
+					<div class="controls">
+						<textarea id="inputAdmins" name="admins"><%= @admins %></textarea>
+					</div>
+				</div>
+				<div class="control-group">
+					<div class="controls">
+						<button type="submit" class="btn">Save</button>
+					</div>
+				</div>
+				<% end %>
 	
+			</div>
+		</div>
 	</div>
 </div>
