--- a/app/views/admin/admins.html.erb
+++ b/app/views/admin/admins.html.erb
@@ -4,7 +4,7 @@
 		<div class="tabbable">
 			<div class="tab-content">
 
-				<%= form_tag action: "admins", class: "form-horizontal" do %>
+				<%= form_tag { action: "admins" }, class: "form-horizontal" do %>
 				<div class="control-group">
 					<label class="control-label" for="inputAdmins">Admin ids</label>
 					<div class="controls">
