--- a/app/views/admin/admins.html.erb
+++ b/app/views/admin/admins.html.erb
@@ -5,13 +5,13 @@
 			<div class="tab-content">
 
 				<%= form_tag({ action: "admins" }, class: "form-horizontal") do %>
-				<div class="control-group">
+				<div class="form-group">
 					<label class="control-label" for="inputAdmins">Admin ids</label>
 					<div class="controls">
 						<textarea id="inputAdmins" name="admins"><%= @admins %></textarea>
 					</div>
 				</div>
-				<div class="control-group">
+				<div class="form-group">
 					<div class="controls">
 						<button type="submit" class="btn">Save</button>
 					</div>
