--- a/app/views/admin/dropbox.html.erb
+++ b/app/views/admin/dropbox.html.erb
@@ -11,20 +11,20 @@
 				<% end %>
 	
 				<%= form_tag({ action: "dropbox" }, { class: "form-horizontal" }) do %>
-				<div class="control-group">
-					<label class="control-label" for="inputAppKey">App Key</label>
-					<div class="controls">
+				<div class="form-group">
+					<label class="control-label col-2" for="inputAppKey">App Key</label>
+					<div class="col-10">
 						<input type="text" id="inputAppKey" name="dropbox_app_key">
 					</div>
 				</div>
-				<div class="control-group">
-					<label class="control-label" for="inputAppSecret">App Secret</label>
-					<div class="controls">
+				<div class="form-group">
+					<label class="control-label col-2" for="inputAppSecret">App Secret</label>
+					<div class="col-10">
 						<input type="text" id="inputAppSecret" name="dropbox_app_secret">
 					</div>
 				</div>
-				<div class="control-group">
-					<div class="controls">
+				<div class="form-group">
+					<div class="col-10 offset-2">
 						<button type="submit" class="btn">Sign in</button>
 					</div>
 				</div>
