--- a/app/views/admin/admins.html.erb
+++ b/app/views/admin/admins.html.erb
@@ -6,13 +6,9 @@
 
 				<%= form_tag({ action: "admins" }, class: "form-horizontal") do %>
 				<div class="form-group">
-					<label class="control-label" for="inputAdmins">Admin ids</label>
-					<div class="controls">
+					<label class="control-label col-2" for="inputAdmins">Admin ids</label>
+					<div class="col-10">
 						<textarea id="inputAdmins" name="admins"><%= @admins %></textarea>
-					</div>
-				</div>
-				<div class="form-group">
-					<div class="controls">
 						<button type="submit" class="btn">Save</button>
 					</div>
 				</div>
