--- a/app/views/homepage/profile.html.erb
+++ b/app/views/homepage/profile.html.erb
@@ -2,32 +2,31 @@
 	<div class="row-fluid">
 
 		<div class="tabbable">
-			<ul class="nav nav-tabs">
-				<li class="active"><a href="#profile" data-toggle="tab">Profile</a></li>
-			</ul>
-
 			<div class="tab-content">
+
 				<section class="tab-pane markdown active" id="profile">
+					
+					<div class="page-header">
+						<h1>Profile</h1>
+					</div>
+
 					<%= form_tag '/homepage/save_profile', :class => 'form-horizontal' do |f| %>
-					<div class="control-group">
-						<label class="control-label" for="user_name">Full name</label>
-						<div class="controls">
+					<div class="form-group">
+						<label class="col-2 control-label" for="user_name">Full name</label>
+						<div class="col-10">
 							<%= text_field_tag('user[name]', @user.name, :required => true) %>
 						</div>
 					</div>
-					<div class="control-group">
-						<label class="control-label" for="user_mail">E-mail</label>
-						<div class="controls">
+					<div class="form-group">
+						<label class="col-2" for="user_mail">E-mail</label>
+						<div class="col-10">
 							<%= text_field_tag('user[mail]', @user.mail, :required => true) %>
-						</div>
-					</div>
-					<div class="control-group">
-					    <div class="controls">
 							<%= submit_tag 'Save' %>
 						</div>
 					</div>
 					<% end %>
 				</section>
+
 			</div>
 		</div>
 
