--- a/app/views/admin/admins.html.erb
+++ b/app/views/admin/admins.html.erb
@@ -9,7 +9,7 @@
 					<label class="control-label col-2" for="inputAdmins">Admin ids</label>
 					<div class="col-10">
 						<textarea id="inputAdmins" name="admins"><%= @admins %></textarea>
-						<button type="submit" class="btn">Save</button>
+						<%= submit_tag 'Save', class:'btn' %>
 					</div>
 				</div>
 				<% end %>
