--- a/app/views/admin/dropbox.html.erb
+++ b/app/views/admin/dropbox.html.erb
@@ -21,7 +21,7 @@
 					<label class="control-label col-2" for="inputAppSecret">App Secret</label>
 					<div class="col-10">
 						<input type="text" id="inputAppSecret" name="dropbox_app_secret">
-						<button type="submit" class="btn">Sign in</button>
+						<%= submit_tag 'Save', class:'btn' %>
 					</div>
 				</div>
 				<% end %>
