--- a/app/views/homepage/profile.html.erb
+++ b/app/views/homepage/profile.html.erb
@@ -11,20 +11,21 @@
 					</div>
 
 					<%= form_tag '/homepage/save_profile', :class => 'form-horizontal' do |f| %>
-					<div class="form-group">
-						<label class="col-2 control-label" for="user_name">Full name</label>
-						<div class="col-10">
-							<%= text_field_tag('user[name]', @user.name, :required => true) %>
+						<div class="form-group">
+							<label class="col-2 control-label" for="user_name">Full name</label>
+							<div class="col-10">
+								<%= text_field_tag('user[name]', @user.name, :required => true) %>
+							</div>
 						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-2" for="user_mail">E-mail</label>
-						<div class="col-10">
-							<%= text_field_tag('user[mail]', @user.mail, :required => true) %>
-							<%= submit_tag 'Save' %>
+						<div class="form-group">
+							<label class="col-2" for="user_mail">E-mail</label>
+							<div class="col-10">
+								<%= text_field_tag('user[mail]', @user.mail, :required => true) %>
+								<%= submit_tag 'Save', class:'btn' %>
+							</div>
 						</div>
-					</div>
 					<% end %>
+
 				</section>
 
 			</div>
