--- a/app/views/admin/admins.html.erb
+++ b/app/views/admin/admins.html.erb
@@ -1,20 +1,13 @@
-<div class="container-fluid">
-	<div class="row-fluid">
+<div id="content" class="container">
 
-		<div class="tabbable">
-			<div class="tab-content">
-
-				<%= form_tag({ action: "admins" }, class: "form-horizontal") do %>
-				<div class="form-group">
-					<label class="control-label col-2" for="inputAdmins">Admin ids</label>
-					<div class="col-10">
-						<textarea id="inputAdmins" name="admins"><%= @admins %></textarea>
-						<%= submit_tag 'Save', class:'btn' %>
-					</div>
-				</div>
-				<% end %>
-	
-			</div>
+	<%= form_tag({ action: "admins" }, class: "form-horizontal") do %>
+	<div class="form-group">
+		<label class="control-label col-2" for="inputAdmins">Admin ids</label>
+		<div class="col-10">
+			<textarea id="inputAdmins" name="admins"><%= @admins %></textarea>
+			<%= submit_tag 'Save', class:'btn' %>
 		</div>
 	</div>
+	<% end %>
+	
 </div>
