--- a/app/views/admin/dropbox.html.erb
+++ b/app/views/admin/dropbox.html.erb
@@ -1,33 +1,25 @@
-<div class="container-fluid">
-	<div class="row-fluid">
+<div id="content" class="container">
 
-		<div class="tabbable">
-			<div class="tab-content">
-
-				<% if @dropbox_session %>
-				Dropbox is currently connected.
-				<% else %>
-				There is no Dropbox connection.
-				<% end %>
+	<% if @dropbox_session %>
+	Dropbox is currently connected.
+	<% else %>
+	There is no Dropbox connection.
+	<% end %>
 	
-				<%= form_tag({ action: "dropbox" }, { class: "form-horizontal" }) do %>
-				<div class="form-group">
-					<label class="control-label col-2" for="inputAppKey">App Key</label>
-					<div class="col-10">
-						<input type="text" id="inputAppKey" name="dropbox_app_key">
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="control-label col-2" for="inputAppSecret">App Secret</label>
-					<div class="col-10">
-						<input type="text" id="inputAppSecret" name="dropbox_app_secret">
-						<%= submit_tag 'Save', class:'btn' %>
-					</div>
-				</div>
-				<% end %>
-	
-			</div>
+	<%= form_tag({ action: "dropbox" }, { class: "form-horizontal" }) do %>
+	<div class="form-group">
+		<label class="control-label col-2" for="inputAppKey">App Key</label>
+		<div class="col-10">
+			<input type="text" id="inputAppKey" name="dropbox_app_key">
 		</div>
-	
 	</div>
+	<div class="form-group">
+		<label class="control-label col-2" for="inputAppSecret">App Secret</label>
+		<div class="col-10">
+			<input type="text" id="inputAppSecret" name="dropbox_app_secret">
+			<%= submit_tag 'Save', class:'btn' %>
+		</div>
+	</div>
+	<% end %>
+	
 </div>
