--- a/app/assets/stylesheets/strap.css.scss
+++ b/app/assets/stylesheets/strap.css.scss
@@ -263,7 +263,7 @@ footer small
 		background-color:transparent ! important;
 	}
 
-	.navbar, header, footer, ul.nav, #content > h1
+	.navbar, footer, ul.nav, #content > h1
 	{
 		display:none;
 	}
