--- a/app/views/admin/admins.html.erb
+++ b/app/views/admin/admins.html.erb
@@ -1,5 +1,9 @@
 <div id="content" class="container">
 
+	<header class="page-header">
+		<h1>Admins</h1>
+	</header>
+
 	<%= form_tag({ action: "admins" }, class: "form-horizontal") do %>
 	<div class="form-group">
 		<label class="control-label col-2" for="inputAdmins">Admin ids</label>
