--- a/app/views/admin/dropbox.html.erb
+++ b/app/views/admin/dropbox.html.erb
@@ -1,5 +1,9 @@
 <div id="content" class="container">
 
+	<header class="page-header">
+		<h1>Dropbox</h1>
+	</header>
+
 	<% if @dropbox_session %>
 	Dropbox is currently connected.
 	<% else %>
