--- a/app/views/admin/users.html.erb
+++ b/app/views/admin/users.html.erb
@@ -1,5 +1,9 @@
 <div id="content" class="container">
 
+	<header class="page-header">
+		<h1>Users</h1>
+	</header>
+
 	<ul class="nav nav-tabs">
 		<% Group.all.each_with_index do |group,i| %>
 		<li <%= 'class="active"'.html_safe if i==0 %>><a href="#group<%= i %>" data-toggle="tab"><%= group.name %> (<%= group.users.count %>)</a></li>
