--- a/app/views/homepage/profile.html.erb
+++ b/app/views/homepage/profile.html.erb
@@ -1,35 +1,23 @@
-<div class="container-fluid">
-	<div class="row-fluid">
+<div id="content" class="container">
 
-		<div class="tabbable">
-			<div class="tab-content">
+	<header class="page-header">
+		<h1>Profile</h1>
+	</header>
 
-				<section class="tab-pane markdown active" id="profile">
-					
-					<div class="page-header">
-						<h1>Profile</h1>
-					</div>
-
-					<%= form_tag '/homepage/save_profile', :class => 'form-horizontal' do |f| %>
-						<div class="form-group">
-							<label class="col-2 control-label" for="user_name">Full name</label>
-							<div class="col-10">
-								<%= text_field_tag('user[name]', @user.name, :required => true) %>
-							</div>
-						</div>
-						<div class="form-group">
-							<label class="col-2" for="user_mail">E-mail</label>
-							<div class="col-10">
-								<%= text_field_tag('user[mail]', @user.mail, :required => true) %>
-								<%= submit_tag 'Save', class:'btn' %>
-							</div>
-						</div>
-					<% end %>
-
-				</section>
-
+	<%= form_tag '/homepage/save_profile', :class => 'form-horizontal' do |f| %>
+		<div class="form-group">
+			<label class="col-2 control-label" for="user_name">Full name</label>
+			<div class="col-10">
+				<%= text_field_tag('user[name]', @user.name, :required => true) %>
 			</div>
 		</div>
+		<div class="form-group">
+			<label class="col-2" for="user_mail">E-mail</label>
+			<div class="col-10">
+				<%= text_field_tag('user[mail]', @user.mail, :required => true) %>
+				<%= submit_tag 'Save', class:'btn' %>
+			</div>
+		</div>
+	<% end %>
 
-	</div>
 </div>
