--- a/app/assets/stylesheets/strap.css.scss
+++ b/app/assets/stylesheets/strap.css.scss
@@ -77,6 +77,11 @@ body
 	margin-bottom:0;
 }
 
+header .nav > li > a
+{
+	padding:5px 10px;
+}
+
 /****************************************************************************
  *  content sections
  *
