--- a/app/views/admin/admins.html.erb
+++ b/app/views/admin/admins.html.erb
@@ -8,7 +8,7 @@
 	<div class="form-group">
 		<label class="control-label col-2" for="inputAdmins">Admin ids</label>
 		<div class="col-10">
-			<textarea id="inputAdmins" name="admins"><%= @admins %></textarea>
+			<textarea id="inputAdmins" name="admins" class="form-control"><%= @admins %></textarea>
 			<%= submit_tag 'Save', class:'btn' %>
 		</div>
 	</div>
