--- a/app/views/admin/dropbox.html.erb
+++ b/app/views/admin/dropbox.html.erb
@@ -4,23 +4,25 @@
 		<h1>Dropbox</h1>
 	</header>
 
+	<p>
 	<% if @dropbox_session %>
 	Dropbox is currently connected.
 	<% else %>
 	There is no Dropbox connection.
 	<% end %>
+	</p>
 	
 	<%= form_tag({ action: "dropbox" }, { class: "form-horizontal" }) do %>
 	<div class="form-group">
 		<label class="control-label col-2" for="inputAppKey">App Key</label>
 		<div class="col-10">
-			<input type="text" id="inputAppKey" name="dropbox_app_key">
+			<input type="text" id="inputAppKey" name="dropbox_app_key" class="form-control">
 		</div>
 	</div>
 	<div class="form-group">
 		<label class="control-label col-2" for="inputAppSecret">App Secret</label>
 		<div class="col-10">
-			<input type="text" id="inputAppSecret" name="dropbox_app_secret">
+			<input type="text" id="inputAppSecret" name="dropbox_app_secret" class="form-control">
 			<%= submit_tag 'Save', class:'btn' %>
 		</div>
 	</div>
