--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,7 @@
 	
 	<script type="text/x-mathjax-config">
 		MathJax.Hub.Config({
-			showProcessingMessages: false,
-			asciimath2jax: {
-				//delimiters: [['~','~'],['$','$']]
-			}
+			showProcessingMessages: false
 		});
 	</script>
 	<script type="text/javascript"
@@ -29,7 +26,7 @@
 	
 	<!--[if lt IE 9]>
 	<div style="background-color:white; z-index:10000; position:absolute; top:0; left:0; right:0; bottom:0;">
-		<p style="text-align:center; margin-top:6em;">You are using a pretty old version of Internet Explorer. Please use a newer version, or Firefox, Chrome, Opera or Safari.</p>
+		<p style="font-family:"Comic Sans"; text-align:center; margin-top:6em;">You are using a pretty old version of Internet Explorer. Please use a newer version, or Firefox, Chrome, Opera or Safari.</p>
 	</div>
 	<![endif]-->
 
