--- a/app/views/admin/users.html.erb
+++ b/app/views/admin/users.html.erb
@@ -1,16 +1,15 @@
-<div id="content" class="container">
+<div id="content">
 
 	<header class="page-header">
 		<h1>Users</h1>
+		<ul class="nav nav-pills">
+			<% Group.all.each_with_index do |group,i| %>
+			<li <%= 'class="active"'.html_safe if i==0 %>><a href="#group<%= i %>" data-toggle="tab"><%= group.name %> (<%= group.users.count %>)</a></li>
+			<% end %>
+			<li <%= 'class="active"'.html_safe if Group.count == 0 %>><a href="#other" data-toggle="tab">Other (<%= @groupless.count %>)</a></li>
+			<li><a href="#import" data-toggle="tab">Import</a></li>
+		</ul>
 	</header>
-
-	<ul class="nav nav-pills">
-		<% Group.all.each_with_index do |group,i| %>
-		<li <%= 'class="active"'.html_safe if i==0 %>><a href="#group<%= i %>" data-toggle="tab"><%= group.name %> (<%= group.users.count %>)</a></li>
-		<% end %>
-		<li <%= 'class="active"'.html_safe if Group.count == 0 %>><a href="#other" data-toggle="tab">Other (<%= @groupless.count %>)</a></li>
-		<li><a href="#import" data-toggle="tab">Import</a></li>
-	</ul>
 
 	<div class="tab-content">
 		<% Group.all.each_with_index do |group,i| %>
@@ -64,7 +63,7 @@
 		<section class="tab-pane markdown" id="import">
 			<p>Paste all data lines from a .xls datanose user export.</p>
 			<%= form_tag '/admin/import_groups', :method => :post do %>
-			<textarea name="paste"></textarea>
+			<textarea name="paste" class="form-control"></textarea>
 			<p><input type="submit" class="btn"></p>
 			<% end %>
 		</section>
