enlarge note box on submit tab

--- a/app/views/page/_submit_tab.html.erb
+++ b/app/views/page/_submit_tab.html.erb
@@ -45,9 +45,9 @@
 
 <% if logged_in? %>
 
-<p>Notes: <%= text_area_tag 'notes' %></p>
+<p>Notes: <%= text_area_tag 'notes', class:'form-control' %></p>
 
-<p><%= submit_tag 'Submit for grading', :class => 'btn btn-warning' %></p>
+<p><%= submit_tag 'Submit for grading', class:'btn btn-warning' %></p>
 
 <script>
 $('#page_form').submit(function(){
