--- a/app/views/page/_submit_tab.html.erb
+++ b/app/views/page/_submit_tab.html.erb
@@ -4,7 +4,6 @@
 </div>
 <% end %>
 
-
 <h1>Submit</h1>
 
 <% if @page.pset.form %>
@@ -12,8 +11,10 @@
 <% else %>
 <p>When you are ready to submit, please use the form below to select all required files, enter a note and press the Submit button. If you do not select all required files, you cannot submit.</p>
 <% end %>
-<p>Remember that you can view your grades on:
-<a href="http://results.mprog.nl/">results.mprog.nl</a></p>
+<p>
+	Remember that you can view your grades on:
+	<a href="http://results.mprog.nl/">results.mprog.nl</a>
+</p>
 
 <% if @page.pset.message %>
 <p><strong><%= @page.pset.message %></strong></p>
@@ -51,7 +52,7 @@
 
 <script>
 $('#page_form').submit(function(){
-    $('input[type=submit]', this).attr('disabled', 'disabled');
+	$('input[type=submit]', this).attr('disabled', 'disabled');
 });
 </script>
 
