--- a/app/views/page/_comments.html.erb
+++ b/app/views/page/_comments.html.erb
@@ -1,10 +1,11 @@
 <div id="comments">
 	<div class="list-group new-question">
-		<div class="list-group-item">
+		<div class="list-group-item clearfix">
+			<p class="list-group-item-text"><strong>Ask a question</strong></p>
 			<%= form_tag("/comment/post_question", method: :post) do %>
 			<%= hidden_field_tag :page_id, @page.id %>
-			<textarea class="form-control" name="comment" placeholder="Ask a question"></textarea>
-			<input type="submit" class="btn-small btn-default btn" value="Post">
+			<textarea class="form-control" name="comment" placeholder="Type your question here"></textarea>
+			<input type="submit" class="btn-mini btn-default btn pull-right" value="Post">
 			<% end %>
 		</div>
 	</div>
@@ -16,23 +17,25 @@
 			<% if is_admin? %>
 			<%= link_to "&times;".html_safe, comment_delete_question_url(thread_id: thread.id), method: :post, class: 'close' %>
 			<% end %>
-			<h4 class="list-group-item-heading"><%= thread.comments.first.content.split('.')[0] %></h4>
-			<p class="list-group-item-text"><strong><%= thread.comments.first.user.name %></strong><%= thread.comments.first.content.split('.').drop(1).join('.') %> <small></small></p>
+			<p class="list-group-item-text"><strong><%= thread.comments.first.user.name %></strong></p>
+			<p><%= thread.comments.first.content %></p>
 		</div>
 		<% end %>
 		<% thread.comments.drop(1).each do |comment| %>
-		<div class="list-group-item">
+		<div class="list-group-item reply">
 			<% if is_admin? %>
 			<%= link_to "&times;".html_safe, comment_delete_answer_url(comment_id: comment.id), method: :post, class: 'close' %>
 			<% end %>
-			<p class="list-group-item-text"><strong><%= comment.user.name %></strong> <%= comment.content %></p>
+			<p class="list-group-item-text"><strong><%= comment.user.name %></strong></p>
+			<p><%= comment.content %></p>
 		</div>
 		<% end %>
-		<div href="#" class="list-group-item">
+		<div class="list-group-item reply clearfix">
+			<p class="list-group-item-text"><strong><%= @user.name %></strong></p>
 			<%= form_tag("/comment/post_answer", method: 'post') do %>
 			<%= hidden_field_tag :thread_id, thread.id %>
 			<textarea class="form-control" name="comment" placeholder="Write a comment"></textarea>
-			<input type="submit" class="btn-small btn-default btn" value="Post">
+			<input type="submit" class="btn-mini btn-default btn pull-right" value="Post">
 			<% end %>
 		</div>
 	</div>
