--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -54,7 +54,7 @@
 	</div>
 
 	<% if logged_in? %>
-	<div class="col-lg-3">
+	<div class="col-lg-3" id="comments-column">
 		<%= render 'comments' %>
 	</div>
 	<% end %>
